Fix for multiple languages : we have /e/ account not google
grep -rl master_clear_desc | xargs sed -i '/master_clear_desc/{s/Google/\/e\//g}'

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -1464,8 +1464,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"কোনো আসোঁৱাহ হোৱা কাৰণে ই-ছিমবোৰ ৰিছেট কৰিব পৰা নাযায়৷"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"সকলো ডেটা মচক (ফেক্টৰী ৰিছেট)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"সকলো ডেটা মচক (ফেক্টৰী ৰিছেট)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ইয়ে আপোনাৰ ডিভাইচৰ "<b>"আভ্যন্তৰিণ সঞ্চয়াগাৰৰ"</b>"লগতে \n\n"<li>"সকলো ডেটা মচিব: আপোনাৰ Google একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপৰ ডেটা আৰু ছেটিংসমূহ"</li>\n<li>"ডাউনল\'ড কৰা হোৱা এপসমূহ"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এই কাৰ্যই আপোনাৰ ফোনৰ "<b>"আভ্যন্তৰীণ সঞ্চয়াগাৰ"</b>" ৰ লগতে \n\n"<li>"আপোনাৰ Google একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপ্ ডাটা আৰু ছেটিংবোৰ"</li>\n<li>"ডাউনলোড কৰা এপসমূহ"</li>" ৰ পৰা সকলো ডেটা মচিব"</string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ইয়ে আপোনাৰ ডিভাইচৰ "<b>"আভ্যন্তৰিণ সঞ্চয়াগাৰৰ"</b>"লগতে \n\n"<li>"সকলো ডেটা মচিব: আপোনাৰ /e/ একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপৰ ডেটা আৰু ছেটিংসমূহ"</li>\n<li>"ডাউনল\'ড কৰা হোৱা এপসমূহ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এই কাৰ্যই আপোনাৰ ফোনৰ "<b>"আভ্যন্তৰীণ সঞ্চয়াগাৰ"</b>" ৰ লগতে \n\n"<li>"আপোনাৰ /e/ একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপ্ ডাটা আৰু ছেটিংবোৰ"</li>\n<li>"ডাউনলোড কৰা এপসমূহ"</li>" ৰ পৰা সকলো ডেটা মচিব"</string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"আপুনি বৰ্তমান এই একাউণ্টসমূহত ছাইন ইন হৈ আছে:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"এই ডিভাইচত আৰু ব্যৱহাৰকাৰী আছে।\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"সংগীত"</li>\n<li>"ফট\'"</li>\n<li>"অইন ব্যৱহাৰকাৰীৰ ডেটা"</li></string>
