--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Қате пайда болғандықтан, eSIM карталарының деректері қайтарылмайды."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Барлық деректерді өшіру (зауыттық параметрлерді қайтару)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Барлық деректерді өшіру"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бұл сіздің планшетіңіздің "<b>"ішкі жадынан"</b>" барлық дерекқорды өшіреді, келесі деректерді қоса:\n\n"<li>"Google есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба дерекқоры және параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Телефонның "<b>"ішкі жадында"</b>" бар бүкіл дерек өшеді, соның ішінде:\n\n"<li>" Google есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба деректері мен параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бұл сіздің планшетіңіздің "<b>"ішкі жадынан"</b>" барлық дерекқорды өшіреді, келесі деректерді қоса:\n\n"<li>"/e/ есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба дерекқоры және параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Телефонның "<b>"ішкі жадында"</b>" бар бүкіл дерек өшеді, соның ішінде:\n\n"<li>" /e/ есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба деректері мен параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Сіз келесі есептік жазбаларға кірдіңіз:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Осы құрылғыда басқа пайдаланушылар бар.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Mузыка"</li>\n<li>"Фотосуреттер"</li>\n<li>"Басқа пайдаланушы деректері"</li></string>
