--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -1466,8 +1466,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"एका एररमुळे eSIM रीसेट करता येणार नाहीत."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"सर्व डेटा मिटवा (फॅक्टरी रीसेट)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"सर्व डेटा मिटवा (फॅक्टरी रीसेट)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"तुमचे Google खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे तुमच्या फोनच्या "<b>"अंतर्गत स्टोरेज"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"तुमचे Google खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"तुमचे /e/ खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे तुमच्या फोनच्या "<b>"अंतर्गत स्टोरेज"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"तुमचे /e/ खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"तुम्ही खालील खात्यांवर सध्या साइन इन केले आहे:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"या डिव्‍हाइसवर इतर वापरकर्ते उपस्‍थित आहेत.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फोटो"</li>\n<li>"अन्य वापरकर्ता डेटा"</li></string>
