--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -1464,8 +1464,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"ଗୋଟିଏ ତ୍ରୁଟି କାରଣରୁ eSIMଗୁଡ଼ିକୁ ରିସେଟ୍ କରାଯାଇପାରିବ ନାହିଁ|"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ସମସ୍ତ ଡାଟା ଖାଲି କରିଦିଅନ୍ତୁ (ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"ସମସ୍ତ ଡାଟା ଖାଲି କରିଦିଅନ୍ତୁ (ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ଏହା, ଆପଣଙ୍କ ଟାବଲେଟର "<b>"ଆଭ୍ୟନ୍ତର ଷ୍ଟୋରେଜରେ ଥିବା ସମସ୍ତ ଡାଟା"</b>", ଯେପରି:\n\n"<li>"ଆପଣଙ୍କ Google ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଏପ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନଲୋଡ ହୋଇଥିବା ଏପ୍ସକୁ ଖାଲି କରିଦେବ।"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ଏହା, ଆପଣଙ୍କ ଫୋନ୍‌‍ "<b>"ଇଣ୍ଟର୍ନଲ୍ ଷ୍ଟୋରେଜ୍‌"</b>"ରେ ଥିବା ସମସ୍ତ ଡାଟାକୁ ଖାଲି କରିଦେବ, ଯେପରି ଆପଣଙ୍କର:\n\n"<li>"Google ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଆପ୍‌ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନ୍‌ଲୋଡ୍‌ ହୋଇଥିବା ସମସ୍ତ ଆପ୍‌"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ଏହା, ଆପଣଙ୍କ ଟାବଲେଟର "<b>"ଆଭ୍ୟନ୍ତର ଷ୍ଟୋରେଜରେ ଥିବା ସମସ୍ତ ଡାଟା"</b>", ଯେପରି:\n\n"<li>"ଆପଣଙ୍କ /e/ ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଏପ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନଲୋଡ ହୋଇଥିବା ଏପ୍ସକୁ ଖାଲି କରିଦେବ।"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ଏହା, ଆପଣଙ୍କ ଫୋନ୍‌‍ "<b>"ଇଣ୍ଟର୍ନଲ୍ ଷ୍ଟୋରେଜ୍‌"</b>"ରେ ଥିବା ସମସ୍ତ ଡାଟାକୁ ଖାଲି କରିଦେବ, ଯେପରି ଆପଣଙ୍କର:\n\n"<li>"/e/ ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଆପ୍‌ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନ୍‌ଲୋଡ୍‌ ହୋଇଥିବା ସମସ୍ତ ଆପ୍‌"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ଆପଣ ବର୍ତ୍ତମାନ ନିମ୍ନ ଆକାଉଣ୍ଟଗୁଡ଼ିକରେ ସାଇନ୍‌ ଇନ୍‌ କରିଛନ୍ତି:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ଏହି ଡିଭାଇସ୍‌ରେ ଅନ୍ୟ ଉପଯୋଗକର୍ତ୍ତାମାନେ ଅଛନ୍ତି।\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ମ୍ୟୁଜିକ୍‌"</li>\n<li>"ଫଟୋ"</li>\n<li>"ଅନ୍ୟାନ୍ୟ ବ୍ୟବହାରକର୍ତ୍ତାଙ୍କ ଡାଟା"</li></string>
