--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Hindi ma-reset ang mga eSIM dahil nagkaroon ng error."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Burahin ang lahat ng data (factory reset)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Burahin lahat (factory reset)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Buburahin nito ang lahat ng data mula sa "<b>"internal storage"</b>" ng iyong tablet, kabilang ang:\n\n"<li>"Iyong Google account"</li>\n<li>"System at data ng app at mga setting"</li>\n<li>"Na-download na apps"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Buburahin nito ang lahat ng data mula sa "<b>"internal storage"</b>" ng iyong telepono, kabilang ang:\n\n"<li>"Iyong Google account"</li>\n<li>"Data at mga setting ng system at app"</li>\n<li>"Na-download na mga app"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Buburahin nito ang lahat ng data mula sa "<b>"internal storage"</b>" ng iyong tablet, kabilang ang:\n\n"<li>"Iyong /e/ account"</li>\n<li>"System at data ng app at mga setting"</li>\n<li>"Na-download na apps"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Buburahin nito ang lahat ng data mula sa "<b>"internal storage"</b>" ng iyong telepono, kabilang ang:\n\n"<li>"Iyong /e/ account"</li>\n<li>"Data at mga setting ng system at app"</li>\n<li>"Na-download na mga app"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Kasalukuyan kang naka-sign in sa mga sumusunod na account:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"May iba pang mga user sa device na ito.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musika"</li>\n<li>"Mga Larawan"</li>\n<li>"Ibang data ng user"</li></string>
