--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1517,8 +1517,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"‏تتعذَّر إعادة تعيين شرائح eSIM بسبب حدوث خطأ."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"محو جميع البيانات (إعادة الضبط على الإعداد الأساسي)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"محو جميع البيانات (إعادة الضبط بحسب إعدادات المصنع)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لجهازك اللوحي، بما في ذلك:\n\n"<li>"حسابك على Google"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لهاتفك، بما في ذلك:\n\n"<li>"حسابك على Google"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لجهازك اللوحي، بما في ذلك:\n\n"<li>"حسابك على /e/"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لهاتفك، بما في ذلك:\n\n"<li>"حسابك على /e/"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"الحسابات المسجَّل الدخول إليها حاليًا:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"هناك مستخدمون آخرون موجودون على هذا الجهاز.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"الموسيقى"</li>\n<li>"الصور"</li>\n<li>"بيانات المستخدم الأخرى"</li></string>
