--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -1478,8 +1478,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Resetovanje eSIM-ova nije uspelo zbog greške."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Izbriši sve podatke (resetovanje na fabrička podešavanja)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Izbriši sve podatke (resetovanje na fabrička podešavanja)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ovim brišete sve podatke iz "<b>"interne memorije"</b>" tableta, uključujući:\n\n"<li>"Google nalog"</li>\n<li>"Podatke i podešavanja sistema i aplikacija"</li>\n<li>"Preuzete aplikacije"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ovim brišete sve podatke iz "<b>"interne memorije"</b>" telefona, uključujući:\n\n"<li>"Google nalog"</li>\n<li>"Podatke i podešavanja sistema i aplikacija"</li>\n<li>"Preuzete aplikacije"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ovim brišete sve podatke iz "<b>"interne memorije"</b>" tableta, uključujući:\n\n"<li>"/e/ nalog"</li>\n<li>"Podatke i podešavanja sistema i aplikacija"</li>\n<li>"Preuzete aplikacije"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ovim brišete sve podatke iz "<b>"interne memorije"</b>" telefona, uključujući:\n\n"<li>"/e/ nalog"</li>\n<li>"Podatke i podešavanja sistema i aplikacija"</li>\n<li>"Preuzete aplikacije"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Trenutno ste prijavljeni na sledeće naloge:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Na ovom uređaju su prisutni i drugi korisnici.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muzika"</li>\n<li>"Fotografije"</li>\n<li>"Drugi korisnički podaci"</li></string>
