--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -1522,8 +1522,8 @@ Mae amgryptio yn cymryd awr neu\'n hirach a bydd y ffôn yn ailgychwyn sawl tro 
     <string name="reset_esim_error_msg">Ni ellir ailosod y eSIMiau oherwydd gwall.</string>
     <string name="master_clear_title">Dileu\'r holl ddata (ailosod i fel yr oedd yn gadael y ffatri)</string>
     <string name="master_clear_short_title">Dileu\'r holl ddata (ailosod i fel yr oedd yn gadael y ffatri)</string>
-    <string name="master_clear_desc" product="tablet">Bydd hyn yn dileu\'r holl data o <b>storfa mewnol</b> dy lechen, gan gynnwys:\n\n<li>Dy gyfrif Google</li>\n<li>Data a gosodiadau system ac apiau</li>\n<li>Apiau wedi\'u lawrlwytho</li></string>
-    <string name="master_clear_desc" product="default">Bydd hyn yn dileu\'r holl data o <b>storfa mewnol</b> dy ffôn, gan gynnwys:\n\n<li>Dy gyfrif Google</li>\n<li>Data a gosodiadau system ac apiau</li>\n<li>Apiau wedi\'u lawrlwytho</li></string>
+    <string name="master_clear_desc" product="tablet">Bydd hyn yn dileu\'r holl data o <b>storfa mewnol</b> dy lechen, gan gynnwys:\n\n<li>Dy gyfrif /e/</li>\n<li>Data a gosodiadau system ac apiau</li>\n<li>Apiau wedi\'u lawrlwytho</li></string>
+    <string name="master_clear_desc" product="default">Bydd hyn yn dileu\'r holl data o <b>storfa mewnol</b> dy ffôn, gan gynnwys:\n\n<li>Dy gyfrif /e/</li>\n<li>Data a gosodiadau system ac apiau</li>\n<li>Apiau wedi\'u lawrlwytho</li></string>
     <string name="master_clear_accounts" product="default">\n\nRwyt ar hyn o bryd wedi mewngofnodi i\'r cyfrifon a ganlyn:\n</string>
     <string name="master_clear_other_users_present" product="default">\n\nMae defnyddwyr eraill ar y ddyfais hon.\n</string>
     <string name="master_clear_desc_also_erases_external"><li>Cerddoriaeth</li>\n<li>Lluniau</li>\n<li>Data arall y defnyddiwr</li></string>
