--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"એક ભૂલને કારણે ઇ-સિમ રીસેટ કરી શકાતા નથી."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"બધો ડેટા ભૂંસી નાખો (ફેક્ટરી રીસેટ)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"બધો ડેટા કાઢી નાખો (ફેક્ટરી રીસેટ)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"આ તમારા ટેબ્લેટનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું Google એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"આ તમારા ફોનનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું Google એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"આ તમારા ટેબ્લેટનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું /e/ એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"આ તમારા ફોનનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું /e/ એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"તમે હાલમાં નીચેના એકાઉન્ટ્સમાં સાઇન ઇન થયેલાં છો:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"આ ઉપકરણ પર અન્ય વપરાશકર્તા હાજર છે.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"સંગીત"</li>\n<li>"ફોટા"</li>\n<li>"અન્ય વપરાશકર્તા ડેટા"</li></string>
