--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"किसी गड़बड़ी की वजह से ई-सिम रीसेट नहीं किया जा सकता."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"सभी डेटा मिटाएं (फ़ैक्ट्री रीसेट)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"सारा डेटा हमेशा के लिए मिटाएं (फ़ैक्ट्री रीसेट)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टैबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन की "<b>"मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्लिकेशन डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्लिकेशन"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टैबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन की "<b>"मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्लिकेशन डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्लिकेशन"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"आप इस समय नीचे दिए गए खातों में साइन इन किए हुए हैं:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"इस डिवाइस पर अन्‍य उपयोगकर्ता मौजूद हैं.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फ़ोटो"</li>\n<li>"अन्य उपयोगकर्ता डेटा"</li></string>
