--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Hiba történt, így az eSIM-eket nem lehet visszaállítani."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Összes adat törlése (gyári beállítások visszaállítása)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Az összes adat törlése"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ez minden adatot töröl a táblagép "<b>"belső tárhelyéről"</b>", többek között: \n \n"<li>"Google-fiókját"</li>\n<li>"A rendszer- és alkalmazásadatokat és beállításokat"</li>" \n "<li>"A letöltött alkalmazásokat"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ez minden adatot töröl a telefon "<b>"belső tárhelyéről"</b>", többek között: \n \n"<li>"Google-fiókja"</li>\n<li>"a rendszer- és alkalmazásadatok és beállítások"</li>" \n"<li>"a letöltött alkalmazások"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Ez minden adatot töröl a táblagép "<b>"belső tárhelyéről"</b>", többek között: \n \n"<li>"/e/-fiókját"</li>\n<li>"A rendszer- és alkalmazásadatokat és beállításokat"</li>" \n "<li>"A letöltött alkalmazásokat"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Ez minden adatot töröl a telefon "<b>"belső tárhelyéről"</b>", többek között: \n \n"<li>"/e/-fiókja"</li>\n<li>"a rendszer- és alkalmazásadatok és beállítások"</li>" \n"<li>"a letöltött alkalmazások"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Jelenleg a következő fiókokba van bejelentkezve:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Más felhasználók is vannak ezen az eszközön.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Zene"</li>\n<li>"Fotók"</li>\n<li>"Más felhasználói adatok"</li></string>
