--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -1491,8 +1491,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"„eSIM“ kortelių nepavyko nustatyti iš naujo dėl klaidos."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Ištrinti visus duomenis (atkurti gamyklinius duomenis)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Ištrinti visus duomenis (atkurti gamyklinius duomenis)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Taip bus ištrinti visi duomenys iš planšetinio kompiuterio "<b>"vidinės atminties"</b>", įskaitant:\n\n"<li>"„Google“ paskyrą"</li>\n<li>"Sistemos ir programų duomenis bei nustatymus"</li>\n<li>"Atsisiųstas programas"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Taip bus ištrinti visi toliau nurodyti duomenys iš telefono "<b>"vidinės atminties"</b>".\n\n"<li>"„Google“ paskyra"</li>\n<li>"Sistemos ir programų duomenys bei nustatymai"</li>\n<li>"Atsisiųstos programos"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Taip bus ištrinti visi duomenys iš planšetinio kompiuterio "<b>"vidinės atminties"</b>", įskaitant:\n\n"<li>"„/e/“ paskyrą"</li>\n<li>"Sistemos ir programų duomenis bei nustatymus"</li>\n<li>"Atsisiųstas programas"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Taip bus ištrinti visi toliau nurodyti duomenys iš telefono "<b>"vidinės atminties"</b>".\n\n"<li>"„/e/“ paskyra"</li>\n<li>"Sistemos ir programų duomenys bei nustatymai"</li>\n<li>"Atsisiųstos programos"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Šiuo metu esate prisijungę prie šių paskyrų:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Yra kitų šio įrenginio naudotojų.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muzika"</li>\n<li>"Nuotraukos"</li>\n<li>"Kiti naudotojo duomenys"</li></string>
