--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"දෝෂයක් හේතුවෙන් මෙම eSIM නැවත සැකසිය නොහැකිය."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"සියලු දත්ත මකන්න (කර්මාන්තශාලා යළි සැකසීම)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"සියලු දත්ත මකන්න (කර්මාන්තශාලා යළි සැකසීම)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ඔබගේ ටැබ්ලටයේ "<b>"අභ්‍යන්තර ආචනය"</b>", සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ Google ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"මෙය ඔබගේ දුරකථනයේ "<b>"අභ්‍යන්තර ගබඩාවේ"</b>" සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ Google ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ඔබගේ ටැබ්ලටයේ "<b>"අභ්‍යන්තර ආචනය"</b>", සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ /e/ ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"මෙය ඔබගේ දුරකථනයේ "<b>"අභ්‍යන්තර ගබඩාවේ"</b>" සියලු දත්ත මකයි:\n\n"<li>"ඔබගේ /e/ ගිණුම"</li>\n<li>"පද්ධති සහ යෙදුම් දත්ත සහ සැකසීම්"</li>\n<li>"බාගත යෙදුම්"</li>" අන්තර්ගතය."</string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ඔබ දැනට පහත ගිණුම් වෙත පුරනය වී සිටියි:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"මෙම උපාංගයේ වෙනත් පරිශීලකයින් සිටි.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"සංගීතය"</li>\n<li>"ඡායාරූප"</li>\n<li>"වෙනත් පරිශීලක දත්ත"</li></string>
