--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1491,8 +1491,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"eSIM karty sa nedajú obnoviť, pretože sa vyskytla chyba."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Vymazať dáta (obnova výr. nastavení)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Vymazať dáta (obn. výr. nast.)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" tabletu, vrátane:\n\n"<li>"účtu Google"</li>\n<li>"dát a nastavení systému a aplikácií"</li>\n<li>"stiahnutých aplikácií"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" telefónu:\n\n"<li>"Účet Google"</li>\n<li>"Dáta a nastavenia systému a aplikácií"</li>\n<li>"Stiahnuté aplikácie"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" tabletu, vrátane:\n\n"<li>"účtu /e/"</li>\n<li>"dát a nastavení systému a aplikácií"</li>\n<li>"stiahnutých aplikácií"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" telefónu:\n\n"<li>"Účet /e/"</li>\n<li>"Dáta a nastavenia systému a aplikácií"</li>\n<li>"Stiahnuté aplikácie"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Aktuálne ste prihlásený/-á do nasledujúcich účtov:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Na tomto zariadení sú prítomní ďalší používatelia.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Hudba"</li>\n<li>"Fotografie"</li>\n<li>"Iné používateľské údaje"</li></string>
