--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Det gick inte att återställa eSIM-korten på grund av ett fel."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Rensa all data (återställ standardinställningar)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Rensa all data (återställ standardinställningar)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Detta raderar all data från enhetens "<b>"interna lagringsutrymme"</b>", bland annat:\n\n"<li>"Ditt Google-konto"</li>\n<li>"System- och appdata och inställningar"</li>\n<li>"Hämtade appar"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Detta raderar all data från enhetens "<b>"interna lagringsutrymme"</b>", bland annat:\n\n"<li>"Ditt Google-konto"</li>\n<li>"System- och appdata och inställningar"</li>\n<li>"Hämtade appar"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Detta raderar all data från enhetens "<b>"interna lagringsutrymme"</b>", bland annat:\n\n"<li>"Ditt /e/-konto"</li>\n<li>"System- och appdata och inställningar"</li>\n<li>"Hämtade appar"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Detta raderar all data från enhetens "<b>"interna lagringsutrymme"</b>", bland annat:\n\n"<li>"Ditt /e/-konto"</li>\n<li>"System- och appdata och inställningar"</li>\n<li>"Hämtade appar"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Du är inloggad på följande konton:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Det finns andra användare på enheten.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musik"</li>\n<li>"Foton"</li>\n<li>"Andra användardata"</li></string>
