--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Hitilafu imetokea wakati wa kufuta data ya eSIM."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Futa data yote (rejesha mipangilio ambayo kifaa kilitoka nayo kiwandani)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Futa data yote (rejesha mipangilio ya kiwandani)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Hii itafuta data yote kutoka hifadhi yako iliyo "<b>"ndani ya kompyuta kibao"</b>", pamoja na:\n \n"<li>"Akaunti yako ya Google"</li>\n<li>"Data na mipangilio ya mfumo na programu"</li>\n<li>"Programu zilizopakuliwa"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Hii itafuta data yote kutoka hifadhi yako iliyo "<b>"ndani ya simu"</b>", pamoja na:\n \n"<li>"Akaunti yako ya Google"</li>\n<li>"Data na mipangilio ya mfumo na programu"</li>\n<li>"Programu zilizopakuliwa"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Hii itafuta data yote kutoka hifadhi yako iliyo "<b>"ndani ya kompyuta kibao"</b>", pamoja na:\n \n"<li>"Akaunti yako ya /e/"</li>\n<li>"Data na mipangilio ya mfumo na programu"</li>\n<li>"Programu zilizopakuliwa"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Hii itafuta data yote kutoka hifadhi yako iliyo "<b>"ndani ya simu"</b>", pamoja na:\n \n"<li>"Akaunti yako ya /e/"</li>\n<li>"Data na mipangilio ya mfumo na programu"</li>\n<li>"Programu zilizopakuliwa"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Kwa sasa umeingia kwenye akaunti zifuatazo:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Kuna watumiaji wengine waliopo kwenye kifaa hiki.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Muziki"</li>\n<li>"Picha"</li>\n<li>"data nyingine ya mtumiaji"</li></string>
