--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"รีเซ็ต eSIM ไม่ได้เพราะมีข้อผิดพลาด"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ลบข้อมูลทั้งหมด (รีเซ็ตเป็นค่าเริ่มต้น)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"ลบข้อมูล (รีเซ็ตเป็นค่าเริ่มต้น)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของแท็บเล็ตของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี Google ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของโทรศัพท์ของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี Google ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของแท็บเล็ตของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี /e/ ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"การดำเนินการนี้จะลบข้อมูลทั้งหมดออกจาก"<b>"ที่จัดเก็บข้อมูลภายใน"</b>"ของโทรศัพท์ของคุณ ซึ่งประกอบด้วย\n\n"<li>"บัญชี /e/ ของคุณ"</li>\n<li>"ข้อมูลและการตั้งค่าของระบบและแอปพลิเคชัน"</li>\n<li>"แอปพลิเคชันที่ดาวน์โหลด"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ขณะนี้คุณได้ลงชื่อเข้าใช้บัญชีต่อไปนี้แล้ว:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"มีผู้ใช้รายอื่นอยู่บนอุปกรณ์เครื่องนี้\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"เพลง"</li>\n<li>"รูปภาพ"</li>\n<li>"ข้อมูลผู้ใช้อื่นๆ"</li></string>
