--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"eSIM asliga qaytarilmadi."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Barcha ma’lumotlarni o‘chirish (zavod sozlamalarini tiklash)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Barcha ma’lumotlarni tozalash (zavod sozlamalarini tiklash)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Planshetning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" Google hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Telefonning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" Google hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Planshetning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" /e/ hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Telefonning "<b>"ichki xotirasidagi"</b>" barcha ma’lumotlar o‘chib ketadi, jumladan:\n\n"<li>" /e/ hisobingiz"</li>\n<li>"Tizim va ilovalarning ma’lumotlari/sozlamalari"</li>\n<li>"Yuklab olingan ilovalar"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Siz hozir tizimga quyidagi hisoblardan kirgansiz:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Bu qurilmada boshqa foydalanuvchilar ham bor.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musiqa"</li>\n<li>"Rasmlar"</li>\n<li>"Foydalanuvchining boshqa ma\'lumotlari"</li></string>
